carousel and hover effect done

--- a/src/components/Home/Banner/Banner.scss
+++ b/src/components/Home/Banner/Banner.scss
@@ -25,14 +25,15 @@
             width: 200px;
             margin-bottom: 20px;
             @include md {
-                width: 500px;
-                margin-right: 60px;
+                width: 400px;
+                margin-right: 0;
                 margin-top: 50px;
                 margin-bottom: 0;
             }
             @include xxl {
-                width: 600px;
+                width: 500px;
                 margin-right: 0;
+                margin-left:400px;
                 margin-top: 0;
             }
         }
