--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -33,18 +33,29 @@
                 text-transform: uppercase;
                 cursor: pointer;
             }
+            
+            li:hover{
+                color:#2CD3E1;
+            }
        } 
+       
        .center {
         font-size: 22px;
         font-weight: 700;
         cursor: pointer;
         @include md {
-            font-size: 34px;
+            font-size: 14px;
             position: absolute;
             left: 50%;
             transform: translateX(-50%);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
         }
         }
+       .center:hover{
+        color:#2CD3E1;
+       } 
        .right {
         display: flex;
         align-items: center;
@@ -58,6 +69,9 @@
             @include md {
                 font-size: 24px;
             }
+        }
+        svg:hover{
+            color:#2CD3E1;
         }
         .cart-icon{
             position: relative;
@@ -74,6 +88,9 @@
                 border-radius: 10px;
             }
         }
+       }
+       .cart-icon:hover{
+        color:#2CD3E1;
        }
     }
 
