--- a/src/components/Footer/Newsletter/Newsletter.scss
+++ b/src/components/Footer/Newsletter/Newsletter.scss
@@ -4,7 +4,7 @@
     height: 400px;
     display: flex;
     align-items: center;
-    background: #f9f9f9 url("../../../assets/newsletter-bg.jpeg");
+    background:  url("../../../assets/newsletter-bg.jpeg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -15,75 +15,84 @@
         align-items: center;
         margin: 0 auto;
         text-align: center;
-    }
-    .small-text {
-        margin-bottom: 15px;
-        text-transform: uppercase;
-        color: rgba(0, 0,0, 0.5 );  
-    }
-    .big-text {
-        margin-bottom: 20px;
-        font-size: 22px;
-        line-height: 30px;
-        font-weight: 500;
-        text-transform: uppercase;
-        padding: 0 30px;
-        @include md {
-            font-size: 28px;
-
-        }
-    }
-    .form {
-        display: flex;
-        gap: 5px;
-        margin-bottom: 10px;
-        input {
-            width: 200px;
-            height: 40px;
-            border-radius: 0;
-            border: 1px solid  rgba(0, 0,0, 0.2 );
-            padding: 0 12px;
-            font-size: 16px;
-            outline: 0;
-            @include md {
-                width: 300px;  
-            }
-        }
-        button {
-            outline: 0;
-            border: 0;
-            height: 40px;
-            width: 100px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            cursor: pointer;
-            font-size: 16px;
-            color: whitesmoke;
-            background-color: #8e2de2 ;
-            border-bottom: 3px solid;
-            @include md {
-                width: 120px;
-            }
-        }
-    }
-    .text {
-        margin-bottom: 20px;
-        font-size: 14px;
-        color:  rgba(0, 0,0, 0.5 );
-    }
-    .social-icons {
-        display: flex;
-        gap:20px;
-        .icon {
-            width: 30px;
-            height: 30px;
-            background-color:  rgba(0, 0,0, 0.8 );
-            border-radius: 30%;
+        .text {
+            margin-bottom: 20px;
+            font-size: 14px;
             color: white;
+            background-color: #C13584;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+        }
+        .small-text {
+            font-size: 20px;
+            margin-bottom: 15px;
+            text-transform: uppercase;
+            background-color: rgb(59, 33, 154);
+            color: whitesmoke;
+            font-weight: 400;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+        }
+        .big-text {
+            margin-bottom: 20px;
+            font-size: 22px;
+            line-height: 30px;
+            font-weight: 500;
+            text-transform: uppercase;
+            padding: 0 30px;
+            color: white;
+            background-color: red;
+            @include md {
+                font-size: 28px;
+                background-color: red;
+                text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+            }
+        }
+        .form {
             display: flex;
-            justify-content: center;
-            align-items: center;
+            gap: 5px;
+            margin-bottom: 10px;
+            input {
+                width: 200px;
+                height: 40px;
+                border-radius: 0;
+                border: 1px solid rgba(0, 0, 0, 0.2);
+                padding: 0 12px;
+                font-size: 16px;
+                outline: none;
+                @include md {
+                    width: 300px;
+                }
+            }
+            button {
+                outline: 0;
+                border: 0;
+                height: 40px;
+                width: 100px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                cursor: pointer;
+                font-size: 16px;
+                color: white;
+                background: #8e2de2;
+                border-bottom: 3px solid #6516aa;
+                @include md {
+                    width: 120px;
+                }
+            }
+        }
+        .social-icons {
+            display: flex;
+            gap: 10px;
+            .icon {
+                width: 30px;
+                height: 30px;
+                background: rgba(0, 0, 0, 0.8);
+                border-radius: 30%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                color: white;
+            }
         }
     }
 }
